# 1.06.00 (38034) Jan 11, 2010
1/11/10 public version for milestone "full redeploy, 2010 Q1"
# 1.05.01 (37381) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.05.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 1.04.03 (30256) Apr 6, 2009
4/6/09 deploy dev version for verifying #1385
3/23/09 fix for #1385, JSpinner Mac problem
# 1.04.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.04.01 (28819) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773