@@ -56,20 +56,3 @@ Salt.mercuryBromide     = Mercury(II) Bromide
 
 # Misc
 WiggleMe.message        = Shake me!
-
-#Options
-options.menu.title=Options
-options.menu.show-bond-indicators=Show Bond Indicators
-options.menu.random-walk=Random Walk
-options.menu.one-crystal-only=One Crystal Only
-options.menu.adjust-random-walk=Adjust Random Walk...
-options.menu.random-walk-adjustment=Random Walk Adjustment
-options.menu.close=Close
-options.menu.adjust-binding-distance=Adjust Binding Distance...
-options.menu.set-binding-distance=Set Binding Distance
-options.menu.binding-distance=Binding Distance
-options.menu.drain-flow=Drain Flow...
-options.menu.set-drain-flow=Set drain flow effect on ions
-options.menu.drain-flow-effect=Drain flow effect
-options.menu.show-debug-controls=Show debug controls
-options.menu.select-background-color=Select background color
