@@ -1,3 +1,4 @@
+1/24/11 #2681, move Options menu items to Developer menu, delete associated strings from English strings file
 # 1.06.00 (38034) Jan 11, 2010
 1/11/10 public version for milestone "full redeploy, 2010 Q1"
 # 1.05.01 (37381) Dec 11, 2009
